<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/item_work">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5.5">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/img_work"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_weight="5">

            <TextView
                android:id="@+id/item_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_go"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:text="@string/go"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />
    </LinearLayout>

</android.support.v7.widget.CardView>