<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/content_work">

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/judul_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_marginTop="90dp"/>
        <TextView
            android:id="@+id/details_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btn_mulai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/ayo"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/img_dialog"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />
</RelativeLayout>